data classes basics

--- a/sources/HumanResourcesLibrary/HumanResourcesLibrary.csproj
+++ b/sources/HumanResourcesLibrary/HumanResourcesLibrary.csproj
@@ -42,8 +42,10 @@
     <Compile Include="DataClasses\Candidate.cs" />
     <Compile Include="DataClasses\ContactWithCandidate.cs" />
     <Compile Include="DataClasses\EnglishLevel.cs" />
+    <Compile Include="DataClasses\IDeepCopy.cs" />
     <Compile Include="DataClasses\Phone.cs" />
     <Compile Include="DataClasses\SocialNetwork.cs" />
+    <Compile Include="DataClasses\UniqueItem.cs" />
     <Compile Include="DataClasses\Vacancy.cs" />
     <Compile Include="IMainRepository.cs" />
     <Compile Include="MainRepository.cs" />
