--- a/sources/HumanResourcesLibrary/HumanResourcesLibrary.csproj
+++ b/sources/HumanResourcesLibrary/HumanResourcesLibrary.csproj
@@ -51,6 +51,13 @@
     <Compile Include="MainRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryService.cs" />
+    <Compile Include="Vacancy.cs" />
+    <Compile Include="VacancyCity.cs" />
+    <Compile Include="VacancyComment.cs" />
+    <Compile Include="VacancyEnum_LevelEnglish.cs" />
+    <Compile Include="VacancyEnum_Status.cs" />
+    <Compile Include="VacancyEnum_TypeEmployment.cs" />
+    <Compile Include="VacancyResponsiblePerson.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
