--- a/sources/HumanResourcesLibrary/HumanResourcesLibrary.csproj
+++ b/sources/HumanResourcesLibrary/HumanResourcesLibrary.csproj
@@ -53,13 +53,12 @@
     <Compile Include="MainRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryService.cs" />
-    <Compile Include="Vacancy.cs" />
-    <Compile Include="VacancyCity.cs" />
-    <Compile Include="VacancyComment.cs" />
-    <Compile Include="VacancyEnum_LevelEnglish.cs" />
-    <Compile Include="VacancyEnum_Status.cs" />
-    <Compile Include="VacancyEnum_TypeEmployment.cs" />
-    <Compile Include="VacancyResponsiblePerson.cs" />
+    <Compile Include="DataClasses\VacancyCity.cs" />
+    <Compile Include="DataClasses\VacancyComment.cs" />
+    <Compile Include="DataClasses\VacancyEnum_LevelEnglish.cs" />
+    <Compile Include="DataClasses\VacancyEnum_Status.cs" />
+    <Compile Include="DataClasses\VacancyEnum_TypeEmployment.cs" />
+    <Compile Include="DataClasses\VacancyResponsiblePerson.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
