First version of ContactParserLibrary: Added: 1) Folder "ReadWriteLibrary" with .cs files:  - IReader.cs  - Masks.cs  - ReaderTxt.cs  - ReaderXml.cs 2) Folder "ContactsLibrary" with .cs files:  - Contact.cs  - ContactType.cs  - ContactsStorage.cs  - ContactsStorage.cs
Also added file ViewModel/CandidatesParserViewModel.cs in the project "CandidatesParser"

And was deleted a file HelloGitHub.txt. This file was a such file for training.

--- a/sources/CandidatesParser/CandidatesParser.csproj
+++ b/sources/CandidatesParser/CandidatesParser.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ViewModel\CandidatesParserViewModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -67,6 +68,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ContactParserLibrary\ContactParserLibrary.csproj">
+      <Project>{39f11a56-93cc-4a99-973d-4e3da738b644}</Project>
+      <Name>ContactParserLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
