--- a/sources/ContactParserLibrary/ContactParserLibrary.csproj
+++ b/sources/ContactParserLibrary/ContactParserLibrary.csproj
@@ -39,7 +39,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContactsLibrary\Contact.cs" />
+    <Compile Include="ContactsLibrary\ContactsManager.cs" />
+    <Compile Include="ContactsLibrary\ContactsStorage.cs" />
+    <Compile Include="ContactsLibrary\ContactType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadWriteLibrary\IReader.cs" />
+    <Compile Include="ReadWriteLibrary\Masks.cs" />
+    <Compile Include="ReadWriteLibrary\ReaderTxt.cs" />
+    <Compile Include="ReadWriteLibrary\ReaderXml.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
