--- a/sources/CandidatesSearcher/CandidatesSearcher.csproj
+++ b/sources/CandidatesSearcher/CandidatesSearcher.csproj
@@ -633,16 +633,16 @@
   <ItemGroup>
     <Compile Include="CandidateSearchCommand.cs" />
     <Compile Include="CandidateSearchVievModel.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="SearchCandidateMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="SearchCandidateMainForm.Designer.cs">
+      <DependentUpon>SearchCandidateMainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="SearchCandidateMainForm.resx">
+      <DependentUpon>SearchCandidateMainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
