--- a/sources/CandidatesSearcher/CandidatesSearcher.csproj
+++ b/sources/CandidatesSearcher/CandidatesSearcher.csproj
@@ -633,6 +633,12 @@
   <ItemGroup>
     <Compile Include="CandidateSearchCommand.cs" />
     <Compile Include="CandidateSearchVievModel.cs" />
+    <Compile Include="SearchCandidatFullInfoForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SearchCandidatFullInfoForm.Designer.cs">
+      <DependentUpon>SearchCandidatFullInfoForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SearchCandidateMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -654,6 +660,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SearchCandidatFullInfoForm.resx">
+      <DependentUpon>SearchCandidatFullInfoForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
