the resources' location was fixed

--- a/sources/CandidatesBrowser/CandidatesBrowser.csproj
+++ b/sources/CandidatesBrowser/CandidatesBrowser.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\DataSources\HumanResourcesLibrary.DataClasses.Candidate.datasource" />
     <None Include="Properties\Settings.settings">
